# projects

./: README.md
FastAPIApplication/: .env_copy  .gitignore  README.md  main.py  pyproject.toml
FastAPIWithJWT/: AccessRefreshTokenExplained.md  README.md  RunningSteps.txt  app.py
Guardrails-Ai/: README.md  guardrails-notebook.ipynb  guradrails_notebook_final.ipynb  part_predict_w_guardrails.py
SemantiSearchUsingPySparkSC/: .gitignore  DesignDetails.txt  README  launch_pyspark.bat  read_package_version.py  requirements.txt
TraditionalRag/: .gitignore  README.md  main.py  pyproject.toml  rag_testing.py
TraditionalRag/DataIngestion/: data_ingestion.py  llm_prompts.py  streamlit_app.py
TraditionalRag/RagRetriever/: rag_retriever.py
TraditionalRag/data/: supervised_learning.txt  unsupervised_learning.txt
TraditionalRag/src/: clean_data.py  create_embeddings.py  faiss_index.index  faiss_metadata.pkl  generate_answer.py  load_data.py  prepare_data.py  rag_pipeline.py  requirements.txt  retrieve_faiss.py  split_text.py  store_faiss.py
intelligent_document_ingestion/: .gitignore  AWSDeploymentSteps.txt  README.md  RunProjectCommands.txt  main.py  pyproject.toml
intelligent_document_ingestion/file-processing-backend/: Dockerfile  app.py  config.py  helper.py  llm_prompts.py  requirements.txt  user.py  worker.py
intelligent_document_ingestion/frontend/: Admin_Users.py  Dockerfile  streamlit_app.py
intelligent_document_ingestion/frontend/pages/: Admin_Users.py  Login.py
intelligent_document_ingestion/infra/: cloudwatch.tf  ecr.tf  ecs.tf  elasticache_redis.tf  iam.tf  main.tf  outputs.tf  variables.tf
intelligent_document_ingestion/loadtest/: loadtest.py
intelligent_document_ingestion/tests/: RunTest.txt  conftest.py
intelligent_document_ingestion/tests/backend/: requirements.txt  test_auth.py  test_auth1.py  test_profile_and_admin_users.py  test_uploads.py  test_uploads_and_status.py
intelligent_document_ingestion/tests/frontend/: test_login.py  test_login_page_smoke.py
intelligent_document_ingestion/tests/worker/: test_metadata_extraction.py  test_sqs_loop.py  test_worker_unit.py
intelligent_document_ingestion/worker/: requirements.txt  worker.py
s3ToLambdaTrigger/: .gitignore  README.md  README_SQS_Design.md  SQS_SNS_Comparision.md
s3ToSQSToLambdaTrigger/: .gitignore  README.md  README_SNS_Design.md
(+16 files in other folders)
