[project]
name = "traditionalrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "faiss-cpu>=1.13.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-text-splitters>=1.0.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.3.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
